python code execution in sandbox

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - "5000:5000"
     container_name: model-execution-container
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   model:
     build:
