--- a/src/execution/Dockerfile
+++ b/src/execution/Dockerfile
@@ -1,3 +1,4 @@
+# Use a base image with Python, JavaScript, and Node.js. This one is for Python, if we need more languages, we need more containers like this.
 # Use a base image with Python, JavaScript, and Node.js
 FROM python:3.9-slim
 
@@ -9,19 +10,34 @@ RUN apt-get update && apt-get install -y \
     npm \
     && rm -rf /var/lib/apt/lists/*
 
+# Create a new non-root user for running code securely
+RUN useradd -ms /bin/bash coder
+
+# Create docker group with host GID and add coder user to it
+RUN groupadd -g 1001 docker && usermod -aG docker coder
+
 # Install Python libraries (for code execution)
 RUN pip install --no-cache-dir \
     pytest \
     flask \
     fastapi \
-    transformers \
-    torch
+    # transformers \
+    # torch \
+    uvicorn\
+    docker
 
 # Set up a directory for the app's code
 WORKDIR /app
 
+COPY . .
+
+
+# Change to the non-root user
+USER coder
+
 # Expose the port for API communication
 EXPOSE 5000
 
-# Command to keep the container running
-CMD ["bash"]
+# Command to run FastAPI
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
+
