--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    container_name: model-execution-container
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    container_name: execution-api
+    environment:
+      - RUNNER_BASE_URL=http://runner:5100
     networks:
       - backend-network
     
@@ -22,10 +22,27 @@ services:
     networks:
       - backend-network
 
+  runner:
+    build:
+      context: ./backend/src/execution
+      dockerfile: Dockerfile
+    command: ["uvicorn", "runner_app:app", "--host", "0.0.0.0", "--port", "5100"]
+    ports:
+      - "5100:5100"
+    container_name: code-runner
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp/runner_jobs:/tmp/runner_jobs
+    networks:
+      - backend-network
+
   frontend:
     build:
       context: ./frontend/coding-agent-frontend
       dockerfile: Dockerfile
+      args:
+        REACT_APP_MODEL_BASE_URL: http://localhost:8000
+        REACT_APP_EXEC_BASE_URL: http://localhost:5000
     ports:
       - "3000:80"
     container_name: react-frontend-container
