--- a/frontend/coding-agent-frontend/package.json
+++ b/frontend/coding-agent-frontend/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "copy-to-clipboard": "^3.3.3",
+    "highlight.js": "^11.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^9.1.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
